Address Sonar issues